--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
     <hamcrest.version>2.1</hamcrest.version>
     <jackson.version>2.9.8</jackson.version>
     <joda.version>2.10.1</joda.version>
+    <json.version>20160810</json.version>
     <junit.version>4.13-beta-1</junit.version>
     <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
     <maven-exec-plugin.version>1.6.0</maven-exec-plugin.version>
@@ -184,6 +185,16 @@
       <version>${beam.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>${json.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+    </dependency>
     <!--
     <dependency>
       <groupId>org.apache.beam</groupId>
